--- a/users/redirecting-with-static-files-and-markup.html
+++ b/users/redirecting-with-static-files-and-markup.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Docker Development - Hatsu Documentation</title>
+        <title>with Static files and Markup - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/01-prepare.html"><strong aria-hidden="true">2.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/02-local-development.html"><strong aria-hidden="true">3.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/03-docker-development.html" class="active"><strong aria-hidden="true">4.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">5.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">6.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html" class="active"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install-with-docker.html"><strong aria-hidden="true">5.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">6.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">7.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">8.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">9.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">10.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -149,7 +149,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/developers/03-docker-development.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/users/redirecting-with-static-files-and-markup.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -178,52 +178,57 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="docker-development"><a class="header" href="#docker-development">Docker Development</a></h1>
+                        <h1 id="redirecting-with-static-files-and-markup"><a class="header" href="#redirecting-with-static-files-and-markup">Redirecting with Static files and Markup</a></h1>
+<p>This should apply to most hosting services and SSG.</p>
+<h2 id="well-known"><a class="header" href="#well-known">Well Known</a></h2>
+<p>For the .well-known files, you need to get the corresponding contents from the hatsu instance and output them as a static file.</p>
 <blockquote>
-<p>You'll need to complete <a href="./01-prepare.html">prepare</a> before you do this.</p>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance and <code>example.com</code> with your site.</p>
 </blockquote>
-<h2 id="dependencies"><a class="header" href="#dependencies">Dependencies</a></h2>
-<p>To use Docker, you only need to install Docker and Docker Compose.</p>
-<pre><code class="language-bash"># Arch-based distro
-sudo pacman -S docker docker-compose
-
-# Debian-based distro
-sudo apt install docker.io docker-compose
+<p>Open your Hatsu instance home page in a browser and F12 -&gt; Console to run:</p>
+<pre><code class="language-js">// .well-known/webfinger
+await fetch('https://hatsu.local/.well-known/webfinger?resource=acct:example.com@hatsu.local').then(res =&gt; res.text())
+// .well-known/nodeinfo
+await fetch('https://hatsu.local/.well-known/nodeinfo').then(res =&gt; res.text())
+// .well-known/host-meta
+await fetch('https://hatsu.local/.well-known/host-meta').then(res =&gt; res.text()).then(text =&gt; text.split('\n').map(v =&gt; v.trim()).join(''))
+// .well-known/host-meta.json
+await fetch('https://hatsu.local/.well-known/host-meta.json').then(res =&gt; res.text())
 </code></pre>
-<!-- ## Building -->
-<h2 id="running"><a class="header" href="#running">Running</a></h2>
-<p>First copy the variables,</p>
-<p>Set <code>HATSU_DOMAIN</code> to your prepared domain
-(e.g. <code>hatsu.example.com</code> without <code>https://</code>)</p>
-<p>and <code>HATSU_TEST_ACCOUNT</code> to your desired user domain
-(e.g. <code>blog.example.com</code> without <code>https://</code>)</p>
-<pre><code class="language-bash"># copy env example
-cp .env.example .env
-# edit env
-nano .env
-</code></pre>
-<p>Then create the database file and run:</p>
-<pre><code class="language-bash"># create database
-touch hatsu.sqlite3
-# run hatsu
-docker-compose up -d
-</code></pre>
-<p>If there is no build image, it will be built automatically at execution time.
-Hatsu uses <a href="https://crates.io/crates/cargo-chef">cargo-chef</a> in the <a href="https://github.com/importantimport/hatsu/blob/main/Dockerfile">Dockerfile</a>,
-which caches dependencies to avoid duplicate build dependencies.</p>
-<p>If you need to rebuild, add the <code>--build</code> flag:</p>
-<pre><code class="language-bash">docker-compose up -d --build
+<p>This will fetch their text contents,
+which you need to save to the SSG equivalent of the static files directory and make sure they are output to the <code>.well-known</code> folder.</p>
+<h2 id="as2-alternate"><a class="header" href="#as2-alternate">AS2 Alternate</a></h2>
+<blockquote>
+<p>Only Mastodon and Misskey / Firefish is known to support auto-discovery, other software requires redirection to search correctly.
+<a href="https://github.com/w3c/activitypub/issues/310">w3c/activitypub#310</a></p>
+</blockquote>
+<p>Make your posts searchable on Fediverse by setting up auto-discovery.</p>
+<p>Since Hatsu's object URLs are predictable, you just need to make sure:</p>
+<ul>
+<li>The page you want to set up for auto-discovery is in the Feed.</li>
+<li>The actual URL of the page is the same as in the Feed. Hatsu handles it this way:
+<ul>
+<li><code>https://example.com/posts/foo =&gt; https://example.com/posts/foo</code></li>
+<li><code>foo/bar</code> =&gt; <code>https://example.com/foo/bar</code></li>
+</ul>
+</li>
+</ul>
+<p>That's it! For <code>https://example.com/foo/bar</code>, just add the following tag to the <code>document.head</code>:</p>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
+<pre><code class="language-html">&lt;link rel=&quot;alternate&quot; type=&quot;application/activity+json&quot; href=&quot;https://hatsu.local/o/https://example.com/foo/bar&quot; /&gt;
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../developers/02-local-development.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../users/redirecting.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../others/compatibility-chart.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../users/redirecting-with-redirects-file.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -233,11 +238,11 @@ which caches dependencies to avoid duplicate build dependencies.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../developers/02-local-development.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../users/redirecting.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../others/compatibility-chart.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../users/redirecting-with-redirects-file.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
