--- a/users/redirecting.html
+++ b/users/redirecting.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Prepare - Hatsu Documentation</title>
+        <title>Redirecting - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/01-prepare.html" class="active"><strong aria-hidden="true">2.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/02-local-development.html"><strong aria-hidden="true">3.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/03-docker-development.html"><strong aria-hidden="true">4.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">5.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">6.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html" class="active"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install-with-docker.html"><strong aria-hidden="true">5.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">6.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">7.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">8.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">9.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">10.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -149,7 +149,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/developers/01-prepare.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/users/redirecting.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -178,28 +178,39 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="prepare"><a class="header" href="#prepare">Prepare</a></h1>
-<h2 id="clone-repository"><a class="header" href="#clone-repository">Clone Repository</a></h2>
-<p>It will create a <code>hatsu</code> subfolder in the current path.</p>
-<pre><code class="language-bash">git clone https://github.com/importantimport/hatsu.git &amp;&amp; cd hatsu
-</code></pre>
-<h2 id="contributing"><a class="header" href="#contributing">Contributing</a></h2>
-<p>Go to the <code>hatsu</code> folder and you can see these:</p>
+                        <h1 id="redirecting"><a class="header" href="#redirecting">Redirecting</a></h1>
+<p>There are two types of redirects required by Hatsu:</p>
+<ol>
+<li>
+<p>Well Known files, redirecting them to make your username searchable.</p>
 <ul>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/docs"><code>docs</code></a> - The documentation you're looking at right now, uses <a href="https://github.com/rust-lang/mdBook">mdBook</a> to build.</li>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/migration"><code>migration</code></a> - <a href="https://www.sea-ql.org/SeaORM/docs/migration/setting-up-migration/">SeaORM Migration</a>.</li>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/src"><code>src</code></a> - Main application.</li>
+<li>before: <code>https://example.com/.well-known/webfinger?resource=acct:carol@example.com</code></li>
+<li>after: <code>https://hatsu.local/.well-known/webfinger?resource=acct:carol@example.com</code></li>
 </ul>
+</li>
+<li>
+<p>Requests accept of type <code>application/activity+json</code>, redirecting them to make your page searchable.</p>
+<ul>
+<li>before: <code>https://example.com/foo/bar</code></li>
+<li>after: <code>https://hatsu.local/o/https://example.com/foo/bar</code></li>
+</ul>
+</li>
+</ol>
+<p>There are many ways to redirect them and you can pick one you like:</p>
+<h2 id="with-static-files-and-markup"><a class="header" href="#with-static-files-and-markup"><a href="./redirecting-with-static-files-and-markup.html">with Static files and Markup</a></a></h2>
+<p>This should apply to most hosting services and SSG.</p>
+<h2 id="with-redirects-file"><a class="header" href="#with-redirects-file"><a href="./redirecting-with-redirects-file.html">with Redirects file</a></a></h2>
+<p>Works with Netlify and Cloudflare Pages.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../users/feed.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../developers/02-local-development.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../users/redirecting-with-static-files-and-markup.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -209,11 +220,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../users/feed.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../developers/02-local-development.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../users/redirecting-with-static-files-and-markup.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
