--- a/users/redirecting-with-platform-specific-config.html
+++ b/users/redirecting-with-platform-specific-config.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Prepare - Hatsu Documentation</title>
+        <title>with Platform-Specific Configuration - Hatsu Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install-with-docker.html"><strong aria-hidden="true">5.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html" class="active"><strong aria-hidden="true">6.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">7.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">8.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">9.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">10.</strong> JSON Feed Extension</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded affix "><li class="part-title">for Users</li><li class="chapter-item expanded "><a href="../users/getting-started.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li class="chapter-item expanded "><a href="../users/feed.html"><strong aria-hidden="true">3.</strong> Feed</a></li><li class="chapter-item expanded "><a href="../users/redirecting.html"><strong aria-hidden="true">4.</strong> Redirecting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../users/redirecting-with-static-files-and-markup.html"><strong aria-hidden="true">4.1.</strong> with Static files and Markup</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-redirects-file.html"><strong aria-hidden="true">4.2.</strong> with Redirects file</a></li><li class="chapter-item expanded "><a href="../users/redirecting-with-platform-specific-config.html" class="active"><strong aria-hidden="true">4.3.</strong> with Platform-Specific Configuration</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">for Admins</li><li class="chapter-item expanded "><a href="../admins/install-with-docker.html"><strong aria-hidden="true">5.</strong> Install with Docker</a></li><li class="chapter-item expanded affix "><li class="part-title">for Developers</li><li class="chapter-item expanded "><a href="../developers/prepare.html"><strong aria-hidden="true">6.</strong> Prepare</a></li><li class="chapter-item expanded "><a href="../developers/development-local.html"><strong aria-hidden="true">7.</strong> Local Development</a></li><li class="chapter-item expanded "><a href="../developers/development-docker.html"><strong aria-hidden="true">8.</strong> Docker Development</a></li><li class="chapter-item expanded affix "><li class="part-title">Others</li><li class="chapter-item expanded "><a href="../others/compatibility-chart.html"><strong aria-hidden="true">9.</strong> Compatibility Chart</a></li><li class="chapter-item expanded "><a href="../others/json-feed-extension.html"><strong aria-hidden="true">10.</strong> JSON Feed Extension</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -149,7 +149,7 @@
                         <a href="https://github.com/importantimport/hatsu" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/developers/prepare.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/importantimport/hatsu/edit/main/docs/src/users/redirecting-with-platform-specific-config.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -178,28 +178,68 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="prepare"><a class="header" href="#prepare">Prepare</a></h1>
-<h2 id="clone-repository"><a class="header" href="#clone-repository">Clone Repository</a></h2>
-<p>It will create a <code>hatsu</code> subfolder in the current path.</p>
-<pre><code class="language-bash">git clone https://github.com/importantimport/hatsu.git &amp;&amp; cd hatsu
+                        <h1 id="redirecting-with-platform-specific-configuration"><a class="header" href="#redirecting-with-platform-specific-configuration">Redirecting with Platform-Specific Configuration</a></h1>
+<p>Works with <a href="https://docs.netlify.com/routing/redirects/#syntax-for-the-netlify-configuration-file">Netlify</a> and <a href="https://vercel.com/docs/projects/project-configuration#redirects">Vercel</a>.</p>
+<h2 id="well-known"><a class="header" href="#well-known">Well Known</a></h2>
+<h3 id="netlify-netlifytoml"><a class="header" href="#netlify-netlifytoml">Netlify <code>netlify.toml</code></a></h3>
+<p>Create a <code>netlify.toml</code> file in the root directory containing the following:</p>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
+<pre><code class="language-toml">[[redirects]]
+  from = &quot;/.well-known/host-meta*&quot;
+  to = &quot;https://hatsu.local/.well-known/host-meta:splat&quot;
+  status = 307
+[[redirects]]
+  from = &quot;/.well-known/nodeinfo*&quot;
+  to = &quot;https://hatsu.local/.well-known/nodeinfo&quot;
+  status = 307
+[[redirects]]
+  from = &quot;/.well-known/webfinger*&quot;
+  to = &quot;https://hatsu.local/.well-known/webfinger&quot;
+  status = 307
 </code></pre>
-<h2 id="contributing"><a class="header" href="#contributing">Contributing</a></h2>
-<p>Go to the <code>hatsu</code> folder and you can see these:</p>
-<ul>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/docs"><code>docs</code></a> - The documentation you're looking at right now, uses <a href="https://github.com/rust-lang/mdBook">mdBook</a> to build.</li>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/migration"><code>migration</code></a> - <a href="https://www.sea-ql.org/SeaORM/docs/migration/setting-up-migration/">SeaORM Migration</a>.</li>
-<li><a href="https://github.com/importantimport/hatsu/tree/main/src"><code>src</code></a> - Main application.</li>
-</ul>
+<h3 id="vercel-verceljson"><a class="header" href="#vercel-verceljson">Vercel <code>vercel.json</code></a></h3>
+<p>Create a <code>vercel.json</code> file in the root directory containing the following:</p>
+<blockquote>
+<p>Replace <code>hatsu.local</code> with your Hatsu instance.</p>
+</blockquote>
+<pre><code class="language-json">{
+  &quot;redirects&quot;: [
+    {
+      &quot;source&quot;: &quot;/.well-known/host-meta&quot;,
+      &quot;destination&quot;: &quot;https://hatsu.local/.well-known/host-meta&quot;
+    },
+    {
+      &quot;source&quot;: &quot;/.well-known/host-meta.json&quot;,
+      &quot;destination&quot;: &quot;https://hatsu.local/.well-known/host-meta.json&quot;
+    },
+    {
+      &quot;source&quot;: &quot;/.well-known/nodeinfo&quot;,
+      &quot;destination&quot;: &quot;https://hatsu.local/.well-known/nodeinfo&quot;
+    },
+    {
+      &quot;source&quot;: &quot;/.well-known/webfinger&quot;,
+      &quot;destination&quot;: &quot;https://hatsu.local/.well-known/webfinger&quot;
+    }
+  ]
+}
+</code></pre>
+<h2 id="as2"><a class="header" href="#as2">AS2</a></h2>
+<blockquote>
+<p>Redirects file only applies to <code>.well-known</code>.
+for AS2 redirects, you need to use <a href="./redirecting-with-static-files-and-markup.html#as2-alternate">AS2 Alternate</a>.</p>
+</blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../admins/install-with-docker.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../users/redirecting-with-redirects-file.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../developers/development-local.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../admins/install-with-docker.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -209,11 +249,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../admins/install-with-docker.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../users/redirecting-with-redirects-file.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../developers/development-local.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../admins/install-with-docker.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
